<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home_icon" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/search_text"
            android:icon="@drawable/search_icon"/>
        <item
            android:id="@+id/nav_category"
            android:title="@string/category"
            android:icon="@drawable/category_icon"/>
        <item
            android:id="@+id/nav_missing_place"
            android:title="@string/third_slide_title"
            android:icon="@drawable/add_icon"/>
    </group>

    <item
        android:title="@string/profile">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon"/>

            </group>
        </menu>
    </item>

    <item
        android:title="@string/share">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/share_icon"/>
                <item
                    android:id="@+id/rate_us"
                    android:title="@string/rate"
                    android:icon="@drawable/rate_icon"/>
            </group>
        </menu>
    </item>
</menu>