<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MakeSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/Make_Selection"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/make_Selection_desc"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_white"
            android:padding="10dp"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/phone_icon" />

            <TextView
                android:id="@+id/via_sms_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="38dp"
                android:layout_toEndOf="@id/phone"
                android:fontFamily="@font/roboto"
                android:text="@string/via_sms"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/via_sms_text"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/phone"
                android:fontFamily="@font/muli_black"
                android:text="@string/phone_num"
                android:textSize="23sp" />

            <Button
                android:id="@+id/via_sms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="25dp"
            android:background="@color/light_white"
            android:padding="10dp"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/via_mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/mail_icon"
                android:fontFamily="@font/roboto"
                android:text="@string/via_mail"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/via_mail_text"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/mail_icon"
                android:fontFamily="@font/muli_black"
                android:text="@string/email_add"
                android:textSize="23sp"/>

            <Button
                android:id="@+id/via_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/flag_transparent"/>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>